// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots object-list/demo interactive list 1`] = `
<div>
  <div>
    <div
      className="objectlist-row objectlist-row--right objectlist-row--search"
    >
      <div
        className="objectlist-row"
      >
        <Select
          className="objectlist-select-filter"
          labelKey="name"
          menuContainerStyle={
            Object {
              "maxHeight": "500px",
            }
          }
          menuStyle={
            Object {
              "maxHeight": "500px",
            }
          }
          onChange={[Function]}
          openOnFocus={true}
          options={
            Array [
              Object {
                "Renderer": [Function],
                "active": false,
                "filterKey": "first_name",
                "name": "First Name",
              },
            ]
          }
          placeholder="Add Filter"
          value={null}
          valueKey="filterKey"
        />
      </div>
    </div>
    <div
      className="objectlist--grow"
    />
    <div
      className="objectlist-row objectlist-row--justify"
    >
      <span
        className="objectlist-results-text"
      >
        258 items found
      </span>
      <div
        className="objectlist-dropdown"
      >
        <button
          className="objectlist-button objectlist-button--dropdown objectlist-button--borderless"
        >
          <i
            className="fa fa-list"
          />
           Change columns
        </button>
        <div
          className="objectlist-dropdown__menu objectlist-dropdown__menu--borderless"
        >
          <button
            className="objectlist-dropdown__item"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-check-square-o objectlist-dropdown__icon"
            />
            Last Name
          </button>
          <button
            className="objectlist-dropdown__item"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-square-o objectlist-dropdown__icon"
            />
            IPv6
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="objectlist__overlay"
    />
    <ul
      className="objectlist-list__list"
    >
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Cecelia Glendzer
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            cglendzer0@biblegateway.com
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Jeff Bletsor
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            jbletsor1@google.es
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Male
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Kessiah Skerman
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            kskerman2@npr.org
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Aubine Canepe
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            acanepe3@prweb.com
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Rowland Wheatman
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            rwheatman4@about.com
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Male
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Isabeau Franies
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            ifranies5@uol.com.br
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item"
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name Last Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Alric Dansey
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            adansey6@wikimedia.org
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Male
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="objectlist-pagination"
  >
    <ul
      className="objectlist-pagination__pages"
    >
      <li
        className="objectlist-pagination__page disabled"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          ← Previous
        </a>
      </li>
      <li
        className="objectlist-pagination__page active"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          4
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          5
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          6
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          7
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          8
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          Next →
        </a>
      </li>
    </ul>
    <p
      className="text-muted"
    >
      <em>
        Showing page 1 of 37 out of 258 total items.
      </em>
    </p>
  </div>
</div>
`;

exports[`Storyshots object-list/demo interactive table 1`] = `
<div>
  <div>
    <div
      className="objectlist-row objectlist-row--right objectlist-row--search"
    >
      <div
        className="objectlist-row"
      >
        <Select
          className="objectlist-select-filter"
          labelKey="name"
          menuContainerStyle={
            Object {
              "maxHeight": "500px",
            }
          }
          menuStyle={
            Object {
              "maxHeight": "500px",
            }
          }
          onChange={[Function]}
          openOnFocus={true}
          options={
            Array [
              Object {
                "Renderer": [Function],
                "active": false,
                "filterKey": "first_name",
                "name": "First Name",
              },
            ]
          }
          placeholder="Add Filter"
          value={null}
          valueKey="filterKey"
        />
      </div>
    </div>
    <div
      className="objectlist--grow"
    />
    <div
      className="objectlist-row objectlist-row--justify"
    >
      <span
        className="objectlist-results-text"
      >
        258 items found
      </span>
      <div
        className="objectlist-dropdown"
      >
        <button
          className="objectlist-button objectlist-button--dropdown objectlist-button--borderless"
        >
          <i
            className="fa fa-list"
          />
           Change columns
        </button>
        <div
          className="objectlist-dropdown__menu objectlist-dropdown__menu--borderless"
        >
          <button
            className="objectlist-dropdown__item"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-check-square-o objectlist-dropdown__icon"
            />
            Last Name
          </button>
          <button
            className="objectlist-dropdown__item"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-square-o objectlist-dropdown__icon"
            />
            IPv6
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="objectlist-table--scroll"
  >
    <div
      className="objectlist__overlay"
    />
    <table
      className="objectlist-table"
    >
      <thead>
        <tr>
          <th
            className="objectlist-table__th "
            width={undefined}
          >
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              First Name
            </div>
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              Last Name
            </div>
          </th>
          <th
            className="objectlist-table__th "
            width={undefined}
          >
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              Email
            </div>
          </th>
          <th
            className="objectlist-table__th "
            width={undefined}
          >
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              Gender
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Cecelia
            <br />
            Glendzer
          </td>
          <td
            className="objectlist-table__td"
          >
            cglendzer0@biblegateway.com
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Jeff
            <br />
            Bletsor
          </td>
          <td
            className="objectlist-table__td"
          >
            jbletsor1@google.es
          </td>
          <td
            className="objectlist-table__td"
          >
            Male
          </td>
        </tr>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Kessiah
            <br />
            Skerman
          </td>
          <td
            className="objectlist-table__td"
          >
            kskerman2@npr.org
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Aubine
            <br />
            Canepe
          </td>
          <td
            className="objectlist-table__td"
          >
            acanepe3@prweb.com
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Rowland
            <br />
            Wheatman
          </td>
          <td
            className="objectlist-table__td"
          >
            rwheatman4@about.com
          </td>
          <td
            className="objectlist-table__td"
          >
            Male
          </td>
        </tr>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Isabeau
            <br />
            Franies
          </td>
          <td
            className="objectlist-table__td"
          >
            ifranies5@uol.com.br
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row"
        >
          <td
            className="objectlist-table__td"
          >
            Alric
            <br />
            Dansey
          </td>
          <td
            className="objectlist-table__td"
          >
            adansey6@wikimedia.org
          </td>
          <td
            className="objectlist-table__td"
          >
            Male
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="objectlist-pagination"
  >
    <ul
      className="objectlist-pagination__pages"
    >
      <li
        className="objectlist-pagination__page disabled"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          ← Previous
        </a>
      </li>
      <li
        className="objectlist-pagination__page active"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          4
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          5
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          6
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          7
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          8
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          Next →
        </a>
      </li>
    </ul>
    <p
      className="text-muted"
    >
      <em>
        Showing page 1 of 37 out of 258 total items.
      </em>
    </p>
  </div>
</div>
`;
